Refactor Jenkins startup script for clarity and efficiency
Refactor Jenkins startup script to improve structure and add comments. Remove unnecessary temporary directory creation and enhance error handling for downloading Jenkins war and cloudflared.